add eslint config and resolve problems

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eject": "react-scripts eject",
     "test:e2e": "TS_NODE_PROJECT=./test/tsconfig.e2e.json TS_NODE_TYPE_CHECK=true wdio run wdio.conf.ts",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "lint": "eslint src"
   },
   "eslintConfig": {
     "extends": [
