--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,5 +19,12 @@ jobs:
         run: npm run build
       - name: unit tests
         run: npm run test
+      - name: unit tests
+        run: npm run test
+      - name: Install Google Chrome
+        run: |
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb
+          sudo apt-get install -f
       - name: e2e tests
         run: npm run test:e2e
