--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,13 +21,10 @@ jobs:
         run: npm run test
       - name: unit tests
         run: npm run test
-      - name: Install Required Packages
+      - name: Install Google Chrome
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libnss3-dev libatk-bridge2.0-0 libx11-xcb-dev libgtk-3-0
-      - name: Set Up Headless Display
-        run: |
-          export DISPLAY=:99
-          Xvfb -screen 0 1920x1080x24 :99 &
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb
+          sudo apt -f install
       - name: e2e tests
         run: npm run test:e2e
