--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,10 +21,7 @@ jobs:
         run: npm run test
       - name: unit tests
         run: npm run test
-      - name: Install Google Chrome
-        run: |
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo dpkg -i google-chrome-stable_current_amd64.deb
-          sudo apt -f install
+      - name: Set up XVFB (Virtual Display)
+        run: sudo apt-get install xvfb
       - name: e2e tests
-        run: npm run test:e2e
+        run: xvfb-run --auto-servernum --server-args="-screen 0 1920x1080x24" npm run test:e2e
