--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,10 +15,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: install modules
         run: npm install
+      - name: start app
+        run: npm start &
       - name: build project
         run: npm run build
-      - name: unit tests
-        run: npm run test
       - name: unit tests
         run: npm run test
       - name: Set up XVFB (Virtual Display)
