--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,10 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+on:
+  - push
+  - pull_request:
+      branches:
+        - main
 jobs:
   init:
     runs-on: ubuntu-latest
