--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,10 +1,6 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
-on:
-  - push
-  - pull_request:
-      branches:
-        - main
+on: [push, pull]
 jobs:
   init:
     runs-on: ubuntu-latest
