--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "build-storybook": "storybook build",
     "lint": "eslint src"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm test"
+    }
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -64,6 +69,7 @@
     "@wdio/mocha-framework": "^8.28.8",
     "@wdio/spec-reporter": "^8.28.8",
     "eslint-plugin-storybook": "^0.6.15",
+    "husky": "^9.0.6",
     "loki": "^0.34.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.10",
